PyMaker/datas/object2/RawHTML/i1/Python_DOC_referPages.macos-python-package-installation-problem.txt
<div class="post-text" itemprop="text">
<p>I'm trying to install "supplychainpy" package for python but i get a gcc error. <em>"error: command 'gcc' failed with exit status 1"</em></p>
<ul>
<li>Yes, I have installed the xcode devtools <code>xcode-select --install</code></li>
<li>Yes, I'm sure gcc is present <code>gcc --version</code></li>
<li>Yes, my pip is up to date <code>pip install --upgrade pip</code></li>
<li>Yes, I have gcc installed (with <code>brew install gcc</code>).</li>
<li>Yes i have anaconda package installed with all the dependancies.</li>
</ul>
<p>This does not help. This is the output i get:</p>
<pre><code>    running build_ext
      building 'supplychainpy.simulations.sim_summary' extension
      creating build/temp.macosx-10.7-x86_64-3.7
      creating build/temp.macosx-10.7-x86_64-3.7/supplychainpy
      creating build/temp.macosx-10.7-x86_64-3.7/supplychainpy/simulations
      gcc -Wno-unused-result -Wsign-compare -Wunreachable-code -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -I/anaconda3/include -arch x86_64 -I/anaconda3/include -arch x86_64 -I/anaconda3/include/python3.7m -c supplychainpy/simulations/sim_summary.c -o build/temp.macosx-10.7-x86_64-3.7/supplychainpy/simulations/sim_summary.o
      supplychainpy/simulations/sim_summary.c:6785:34: warning: variable '__pyx_v_f' is uninitialized when used here [-Wuninitialized]
        __pyx_t_1 = PyFloat_FromDouble(__pyx_v_f); if (unlikely(!__pyx_t_1)) __PYX_ERR(0, 296, __pyx_L1_error)
                                       ^~~~~~~~~
      supplychainpy/simulations/sim_summary.c:6771:18: note: initialize the variable '__pyx_v_f' to silence this warning
        float __pyx_v_f;
                       ^
                        = 0.0
      supplychainpy/simulations/sim_summary.c:8290:65: error: too many arguments to function call, expected 3, have 4
          return (*((__Pyx_PyCFunctionFast)meth)) (self, args, nargs, NULL);
                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~                     ^~~~
      /Library/Developer/CommandLineTools/usr/lib/clang/10.0.0/include/stddef.h:105:16: note: expanded from macro 'NULL'
      #  define NULL ((void*)0)
                     ^~~~~~~~~~
      1 warning and 1 error generated.
      error: command 'gcc' failed with exit status 1

     Failed building wheel for supplychainpy
  Running setup.py clean for supplychainpy
Failed to build supplychainpy
Installing collected packages: supplychainpy
  Running setup.py install for supplychainpy ... error
    Complete output from command /anaconda3/bin/python -u -c "import setuptools, tokenize;__file__='/private/var/folders/m2/c5429khn3pj5581m817y69qc0000gn/T/pip-install-nrjs0muv/supplychainpy/setup.py';f=getattr(tokenize, 'open', open)(__file__);code=f.read().replace('\r\n', '\n');f.close();exec(compile(code, __file__, 'exec'))" install --record /private/var/folders/m2/c5429khn3pj5581m817y69qc0000gn/T/pip-record-md9iewfc/install-record.txt --single-version-externally-managed --compile:
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>The problem may be the gcc compiler config. You can download the compiled <code>.whl</code> 
 file from <a href="https://pypi.org/project/supplychainpy/#files" rel="nofollow noreferrer">https://pypi.org/project/supplychainpy/#files</a>. Note that <code>*-macosx_10_6_x86_64.whl</code> files are for macosx.</p>
</div>
<span class="comment-copy">Welcome to SO! Sorry, this isn't helpful, but: That looks weird, it looks like it's using Clang headers. I'm not a Mac user - is that normal behaviour?</span>
<span class="comment-copy">I've tried to do this but i get this: <code>supplychainpy-0.0.5-cp35-cp35m-macosx_10_6_x86_644.whl is not a supported wheel on this platform.</code></span>
<span class="comment-copy">@AleksandrTerekhov The wheel file is suitable for py3.5. Maybe you can create a py3.5 environment. ( Not a good solution, but fast.)</span>
